[package]
name = "jup-swap-program-test"
version = "0.1.0"
edition = "2021"

[dependencies]
litesvm = "0.6.1"
litesvm-token = "0.6.1"
solana-instruction = "2.2.1"
solana-keypair = "2.2.1"
solana-message = "2.2.1"
solana-native-token = "2.2.1"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
solana-system-interface = "1.0.0"
solana-transaction = "2.2.1"
spl-associated-token-account-client = "2.0.0"
jup-swap = { git = "https://github.com/alexk-dev/jupiter-swap-api-client.git", package = "jupiter-swap-api-client"}
tokio = { version = "1.44.1", features = ["full"] }
borsh = "1.5.6"
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"
sha2 = "0.10.8"
solana-account = "2.2.1"
solana-program-option = "2.2.1"
solana-program-pack = "2.2.1"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
solana-commitment-config = "2.2.1"
solana-client = "2.2.1"
solana-address-lookup-table-program = "2.2.1"
solana-address-lookup-table-interface = "2.2.1"
solana-signature = "2.2.1"
solana-hash = "2.2.1"
solana-compute-budget = "2.2.1"
solana-compute-budget-interface = "2.2.1"
solana-transaction-status-client-types = "2.2.1"
bincode = "1.3.3"
solana-rpc-client-api = "2.2.1"
jsonrpc-core = "18.0.0"
bs58 = "0.5.1"
solana-account-decoder-client-types = "2.2.1"
